--- a/Hugo Boss.html
+++ b/Hugo Boss.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="hugoboss.css" />
+     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <a href="test.html" target="_blank">Tillbaka till startsidan</a>
